crates/formatter/tests/snapshots/snapshots__anki__storage__deckconfig__add_if_unique.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert or ignore into deck_config (id, name, mtime_secs, usn, config)
values (?, ?, ?, ?, ?);
