crates/formatter/tests/snapshots/snapshots__anki__storage__deckconfig__add_or_update.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert or replace into deck_config (id, name, mtime_secs, usn, config)
values (?, ?, ?, ?, ?);
