crates/formatter/tests/snapshots/snapshots__anki__storage__deckconfig__get.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
select id, name, mtime_secs, usn, config from deck_config;
