crates/formatter/tests/snapshots/snapshots__anki__storage__deckconfig__update.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
update deck_config
set name = ?, mtime_secs = ?, usn = ?, config = ?
where id = ?;
